--- a/page_subject/work/manifest.json
+++ b/page_subject/work/manifest.json
@@ -1,6 +1,6 @@
 {
     "name" : "sleeping",
-    "appid" : "__UNI__879E084",
+    "appid" : "__UNI__935BEB3",
     "description" : "",
     "versionName" : "1.0.0",
     "versionCode" : "100",
